# packers-movers-admin

./: .env  .gitignore  API_TESTING_GUIDE.md  CHECKLIST_MIGRATION.sql  COMPLETE_WORKFLOW.md  DROP_CHECKLIST_TABLE.sql  DROP_SERVICES_TABLE.sql  FINAL_SUMMARY.md  FRONTEND_INTEGRATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  Job_Verification_API.postman_collection.json  README.md  SYSTEM_DIAGRAMS.md  UPDATE_CREW_PROFILE_FIELDS.sql  add_admin_phone_number.sql  add_crew_bank_details.sql  app.json  check_crew_status.py  check_database.py  check_deployment.py  check_storage.py  create_all_tables.sql  create_tables.py  create_tables_defaultdb.py  crew_admin.db  diagnose_utho.py  fix_crew_status.py  fix_permissions.sql  grant_permissions.sql  insert_services.py  investigate_databases.py  main.py  pyproject.toml  requirements.txt  reset_db.py  test_new_utho.py  test_old_utho.py  test_verification_api.py  verify_url_storage.py
app/core/: email.py  invoice_generator.py  security.py  sms.py  storage.py
app/database/: db.py
app/models/: checklist.py  client.py  crew.py  invoice.py  job.py  photo.py
app/routers/: __init__.py  admin.py  auth.py  crew.py  job.py  job_temp.py  workflow.py
app/schemas/: approval.py  auth.py  checklist.py  crew.py  crew_job.py  job.py  verification.py  workflow.py
